--- a/.env
+++ b/.env
@@ -10,6 +10,6 @@ DB_USER = root
 # BANCO POSTGRES
 
 DB_PG_NAME = db_colaborador
-DB_PG_PASSWORD = ''
+DB_PG_PASSWORD = root
 DB_PG_HOST = localhost
 DB_PG_USER = postgres
